    - links to mp3 and ogg are replaced with HTML5 audio elements during initial parsing
    - HTML `audio` elements are deprecated to links for EPUB2 files
    - mp3 and ogg files will be included in EPUB3 files.
    - because PPers have been hiding links to sound files for ebook files using `x-ebookmaker` CSS, we are adding CSS to unhide elements that contain the audio elements, for EPUB3 only.


0.12.40 February 9, 2024
- fixed an issue parsing large text files. "The Entire Project Gutenberg Works of Mark Twain" was 1.2M.
- fixed an issue detecting multiline boilerplate markers.
- added an id 'pg-title-no-subtitle' to a span containing dc.title_no_subtitle


0.12.39 January 31, 2024
- fixed an EPUB3 problem affecting kobo reader when a book has more than 10 chapters - read order was being sorted as a string.
- for EPUB2, added a deprecation for `u` elements. fixes #210
- fixed multiline handling of MARKER_END in text boilerplate. fixes #209
- libgutenberg 0.10.20


0.12.38 December 8, 2023
- fixed reversion where adding display: initial over-wrote the addition of display:flex


0.12.37 December 7, 2023
- added `bgsound` to list of removed elements
- added 'initial` as an allowed value for the CSS properties `display`, `margin-*`, `font-*`, `text-*`, and  `padding-*`. This has been part of W3C REC for over 2 years and is primarily useful for reproducing the behavior of the deprecated HTML4 align attribute in HTML5. 
- Improved rendering of tables with respect to the deprecated `align` attribute.
- added handling for the deprecated `color` attribute on `hr` elements.
- updates pg urls in the backfile to https, updates links to html4 files to html5 files. fixed #194 
- fixes #207 bug where gif files are converted to png, but the manifest gives them the wrong mediatype.
- libgutenberg 0.10.19


0.12.36 September 20, 2023
Nothing in this release should affect usage without Ebookconverter (e.g. Online Ebookmaker).