@@ -51,12 +51,12 @@ CONFIG_FILES = ['/etc/ebookmaker.conf', os.path.expanduser('~/.ebookmaker')]
 DEPENDENCIES = collections.OrderedDict((
     ('all', ('html', 'epub', 'epub3', 'kindle', 'kf8', 'pdf', 'txt', 'rst')),
     ('test', ('html', 'epub', 'epub3')),
-    ('html', ('html.images', 'html.noimages')),
-    ('epub', ('epub.images', 'epub.noimages')),
+    ('html', ('html.images',)),
+    ('epub', ('epub.images', 'epub.noimages',)),
     ('epub3', ('epub3.images',)),
     ('kindle', ('kindle.images',)),
     ('kf8', ('kf8.images',)),
-    ('pdf', ('pdf.images', 'pdf.noimages')),
+    ('pdf', ('pdf.images',)),
     ('txt', ('txt.utf-8', 'txt.iso-8859-1', 'txt.us-ascii')),
     ('rst', ('rst.gen', )),
     ('kindle.noimages', ('epub.noimages', )),
@@ -64,8 +64,7 @@ DEPENDENCIES = collections.OrderedDict((
     ('kf8.images', ('epub3.images', )),
     ('html.noimages', ('picsdir.noimages', )),
     ('html.images', ('picsdir.images', )),
-    ('pdf.noimages', ('picsdir.noimages', )),
-    ('pdf.images', ('picsdir.images', )),
+    ('pdf.images', ('html.images',)),
     ('rst.gen', ('picsdir.images', )),
 ))
 
@@ -73,15 +72,14 @@ BUILD_ORDER = """
 picsdir.images picsdir.noimages
 rst.gen
 txt.utf-8 txt.iso-8859-1 txt.us-ascii
-html.images html.noimages
-epub.noimages kindle.noimages pdf.noimages
+html.images
+epub.noimages kindle.noimages
 epub.images kindle.images pdf.images
 epub3.images kf8.images
 cover.small cover.medium
 qrcode rdf facebook twitter mastodon null""".split()
 
 FILENAMES = {
-    'html.noimages': '{id}-noimages-h.html',
     'html.images': '{id}-h.html',
 
     'epub.noimages': '{id}-epub.epub',
@@ -92,7 +90,6 @@ FILENAMES = {
     'kindle.images': '{id}-images-kindle.mobi',
     'kf8.images': '{id}-kf8-kindle.mobi',
 
-    'pdf.noimages': '{id}-pdf.pdf',
     'pdf.images': '{id}-images-pdf.pdf',
 
     'txt.utf-8': '{id}-0.txt',
@@ -594,6 +591,9 @@ def main():
             if job.type.startswith('kf8') and 'epub3.images' in output_files:
                 absoutputdir = os.path.abspath(job.outputdir)
                 job.url = os.path.join(absoutputdir, output_files['epub3.images'])
+            if job.type == 'pdf.images' and 'html.images' in output_files:
+                absoutputdir = os.path.abspath(job.outputdir)
+                job.url = os.path.join(absoutputdir, output_files['html.images'])
 
             options.outputdir = job.outputdir
             do_job(job)
